kubernetes/ui/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ui
  labels:
    app: ui
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/name: ui
    app.kubernetes.io/part-of: ui-app
spec:
  to:
    kind: Service
    name: ui
    weight: 100
  port:
    targetPort: 8501
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
